# beet-plugins

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
beet_plugins/: latest_snapshot.py  root_relative_location.py  switch.py
beet_plugins/utils/: lantern.bolt  math.bolt  objectives.bolt
examples/latest_snapshot/: beet.yml
examples/latest_snapshot/src/: main.mcfunction
examples/macro_interpolation/: beet.yml
examples/macro_interpolation/src/: main.mcfunction
examples/nbt_literals/: beet.yml
examples/nbt_literals/src/: main.mcfunction
examples/objectives/: beet.yml
examples/objectives/src/: main.mcfunction
examples/root_location/: beet.yml
examples/root_location/src/nested/core/: main.mcfunction
examples/root_relative_location/: beet.yml
examples/root_relative_location/src/: bar.mcfunction
examples/root_relative_location/src/nested/core/: main.mcfunction
examples/switch/: beet.yml
examples/switch/src/: main.mcfunction
examples/utils/: beet.yml
examples/utils/src/: main.mcfunction  uuid.mcfunction
plugins/utils/: entity.bolt  math.bolt  path.bolt
