[tool.poetry]
name = "beet-plugins"
version = "0.1.0"
description = ""
authors = ["TheWii <67249660+TheWii@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bolt = ">=0.6.0"
bolt-expressions = ">=0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
